--- a/InterviewPreparation/appsettings.json
+++ b/InterviewPreparation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db,1433;Database=interview_preparation;User Id=sa;Password=Admin123;TrustServerCertificate=True;"
+  }
 }
